--- a/eco3ice-app/Base.lproj/LaunchScreen.storyboard
+++ b/eco3ice-app/Base.lproj/LaunchScreen.storyboard
@@ -20,7 +20,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="e3i launch__2048.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="jv7-fT-6uX">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="e3i_launch__2048.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="jv7-fT-6uX">
                                 <rect key="frame" x="27" y="193" width="360" height="349.66666666666663"/>
                             </imageView>
                         </subviews>
@@ -39,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="e3i launch__2048.jpg" width="2048" height="2048"/>
+        <image name="e3i_launch__2048.jpg" width="2048" height="2048"/>
     </resources>
 </document>
